--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "axios": "^1.6.5",
     "pinia": "^2.1.7",
     "quasar": "^2.14.2",
+    "vee-validate": "^4.12.4",
     "vue": "^3.3.11",
     "vue-axios": "^3.5.2",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@quasar/vite-plugin": "^1.6.0",
