--- a/.github/workflows/aws_s3.yaml
+++ b/.github/workflows/aws_s3.yaml
@@ -1,10 +1,18 @@
 name: Build and Deploy to S3
 
-on: 
-  push:    # master Branch에서 push 이벤트가 일어났을 때만 실행
-    branches:
-      - master
+#on: 
+#  push:    # master Branch에서 push 이벤트가 일어났을 때만 실행
+#    branches:
+#      - master
 
+on:      
+  workflow_dispatch:
+    inputs:
+      tags:
+        description: "TAG"
+        required: true
+        default: "master"
+        
 jobs:
   build:
     runs-on: ubuntu-latest
